:boom: fixed overflow

--- a/assets/sass/_index.scss
+++ b/assets/sass/_index.scss
@@ -5,7 +5,6 @@ body {
   margin: 0 auto;
   width: 100%;
   height: 100vh;
-  overflow: hidden;
   user-select: none;
   background: $bg-color;
   background: radial-gradient(#001A4D, #00050F);
@@ -21,7 +20,7 @@ body {
 .disclaimer-text{
   width: 100%;
   height: 10%;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   transform: translateY(100%);
   background: rgba(0,0,0,0.8);
